	  to ARMV7M.  This is a major namespace change needed to cleanly support the
	  ARM Cortex-M4 which is also in the ARMv7 M Series (specifically, ARMv7E-M).
	* sched/sig_initialize.c, sig_received.c, and mq_waitirq.c.  Fixed several
	  critical bugs related to signal handling initialization and for signals
	  the wake up tasks that are waiting to send or receive message queues.  In
	  the first two files, errors would prevent proper allocation of signal-related
	  structures from interrupt handlers.  In the second, there was missing
	  "clean-up" logic after a signal occurred, leaving the message queue in
	  a bad state and resulting in PANICs.  All are important.  (submitted by
	  hkwilton).
	* arch/arm/src/kinetis:  Added header files defining all Kinetis registers
	  and bit fields within all Kinetis registers.
	* configs/twr-k60n512:  Add support for the Kinetis K60 Tower board
	  (TWR-K60N512).
	* drivers/can.c:  Fixed a semaphore overflow problem in the CAN driver
	  (reported by Li Zhouy (Lzzy)).
	* 8/18/2011: The basic port to the FreeScale Kinetics TWR-K60N512 board is
	  now functional.
	* confgs/twr-k60n512: Add Kinetics TWR-K60N512 NSH configuration.
	* drivers/analog and include/nuttx/analog: Add ADC driver infrastructure
	  and TI ADS1255 driver developed and submitted by Li Zhouy (Lzzy)).
	* arch/arm/stm32/stm32_sdio.h and drivers/mmcsd/mmcsd.c:  Add logic to
	  multiplex usage of the GPIO pins (contributed by Uros Platise).
	* configs/twr-k60n512/nsh:  Added and verified a NuttShell (NSH)
	  configuration for the Freescale, Kinetis TWR-K60N512 board.

6.9 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/src/kinetis/kinetis_sdhc.c: SDHC driver for Kinetis parts.
	  Initially check-in is just a crude port of the STM32 SDIO driver.
	  Much more is needed.
	* graphics/, include/nuttx/nx:  Add new NX interfaces for drawing
  	  circles -- both circular outlines and filled circles.
