@@ -1,4 +1,4 @@
-NuttX TODO List (Last updated August 22, 2011)
+NuttX TODO List (Last updated August 24, 2011)
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 nuttx/
@@ -67,6 +67,7 @@ o Task/Scheduler (sched/)
   Description: Implement sys/wait.h and functions.  Consider implementing wait,
                waitpid, waitid.  At present, a parent has no information about
                child tasks.
+
                Update: A simple but usable version of waitpid() has been included.
                This version is not compliant with all specifications and can be
                enabled with CONFIG_SCHED_WAITPID. 
@@ -1348,20 +1349,3 @@ o Other Applications & Tests (apps/examples/)
                the artifact is larger.
   Status:      Open
   Priority:    Medium.
-
-  Description:  examples/nxlines.  There is an error in the line rendering
-                on the 24th step (270 degrees).  At that point, the
-                calculated position is just a bit from being horizontal.
-                Using configuration configs/stm3210e-eval/nxlines, I see:
-
-                  sin: ffff0000 cos: ffffffed radius: 76 halfx: -76 halfy: -1
-
-                And the resulting almost horizontal line:
-                
-                   vector: (44,159)->(196,161)
-
-                is rendered incorrectly every time around. Looks like logic
-                in nxgl_splitlines malfunctioned.
-
-  Status:       Open
-  Priority:     Medium/High
